--- a/playground/app/app.html
+++ b/playground/app/app.html
@@ -1,1 +1,17 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="content">
+    <ion-toolbar>
+        <ion-title></ion-title>
+    </ion-toolbar>
+    <ion-content>
+        <ion-list>
+            <button ion-item (click)="openPage(Page1)">
+                Page 1
+            </button>
+            <button ion-item (click)="openPage(Page2)">
+                Page 2
+            </button>
+        </ion-list>
+    </ion-content>
+</ion-menu>
+
+<ion-nav [root]="rootPage" #content ></ion-nav>
