--- a/playground/app/pages/page1/page1.html
+++ b/playground/app/pages/page1/page1.html
@@ -1,5 +1,5 @@
 <ion-navbar *navbar>
-  <ion-title>Tab 1</ion-title>
+  <ion-title>Page 1</ion-title>
 </ion-navbar>
 
 <ion-content padding class="page1">
