--- a/playground/app/pages/page2/page2.html
+++ b/playground/app/pages/page2/page2.html
@@ -1,10 +1,7 @@
-
 <ion-navbar *navbar>
-  <ion-title>
-    Tab 2
-  </ion-title>
+  <ion-title>Page 2</ion-title>
 </ion-navbar>
 
 <ion-content class="page2">
-
+  <h2>Lorem ipsum</h2>
 </ion-content>
