added basic navigation inside a page

--- a/playground/app/app.html
+++ b/playground/app/app.html
@@ -4,10 +4,10 @@
     </ion-toolbar>
     <ion-content>
         <ion-list>
-            <button ion-item (click)="openPage(Page1)">
+            <button ion-item (click)="openPage(page1)">
                 Page 1
             </button>
-            <button ion-item (click)="openPage(Page2)">
+            <button ion-item (click)="openPage(page2)">
                 Page 2
             </button>
         </ion-list>
