--- a/playground/app/pages/page1/page1.html
+++ b/playground/app/pages/page1/page1.html
@@ -4,6 +4,11 @@
 
 <ion-content padding class="page1">
   <h2>Welcome to Ionic!</h2>
+
+  <button ion-item (click)="gotoPage(page)">
+    Page 2
+  </button>
+
   <p>
     This starter project comes with simple tabs-based layout for apps
     that are going to primarily use a Tabbed UI.
