WIP: added first custom component

--- a/playground/app/app.html
+++ b/playground/app/app.html
@@ -1,4 +1,8 @@
+
 <ion-menu [content]="content">
+
+    <my-component> -- to be replaced -- </my-component>
+
     <ion-toolbar>
         <ion-title></ion-title>
     </ion-toolbar>
